Amended nginx roles for Ubuntu.

--- a/playbooks/deploy-mwlab.yml
+++ b/playbooks/deploy-mwlab.yml
@@ -1,6 +1,13 @@
 - hosts: mwlab
-  gather_facts: false
+  #gather_facts: false
   become: true
   strategy: free
   roles:
     - { role: ../roles/inetsim }
+
+- hosts: targets
+  #gather_facts: false
+  become: true
+  strategy: free
+  roles:
+    - { role: ../roles/nginx }
