--- a/inventories/mwlab.yml
+++ b/inventories/mwlab.yml
@@ -5,6 +5,9 @@ mwlab:
       ansible_user: vagrant
       memory: 1024                   # ram to be assigned in MB
       ansible_ssh_private_key_file: .vagrant/machines/mwlab00/virtualbox/private_key
+
+targets:
+  hosts:
     target01:                         # hostname
       ansible_host: 192.168.22.11   # ip address
       ansible_user: vagrant
